# stlite-chat

./: .gitignore  Makefile  README.md  hello.py  index.html  pyproject.toml  setup.py
.streamlit/: config.toml
scripts/: build.sh  convert_to_html.py  format.sh
src/: app.py
tests/: test_app.py
