[project]
name = "stlite-chat"
version = "0.1.0"
description = "Stlite Chat Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.24.0",
    "pandas",
    "matplotlib",
    "setuptools>=75.3.0",
    "watchdog>=5.0.3",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
